# lwsadmin

./: .dockerignore  .gitignore  .gitmodules  Makefile  README.md  app.py  docker-compose.yaml  env.example  pyproject.toml  uvpyproject.toml
alembic/: env.py
alembic/versions/: c07b27f5146a_payments.py  d95f75cd9514_init.py  dc82ecfb7151_accounts.py  e2bc465ed3aa_accounts_can_be_active_or_not.py
dockerfiles/: Dockerfile-lws  Dockerfile-tor  torrc
lws/: Dockerfile
lwsadmin/: .dockerignore  Dockerfile  Makefile  app.py  cli.py  config.py  factory.py  filters.py  helpers.py  models.py  requirements.txt  tor_hostname.txt
lwsadmin/lws/: config.py  helpers.py
lwsadmin/lws/routes/: meta.py
lwsadmin/lws/templates/: index.html
lwsadmin/routes/: account.py  api.py  auth.py  home.py
lwsadmin/templates/: base.html
lwsadmin/templates/pages/: account.html  home.html  login.html  register.html  setup.html
oldlwsadmin/lws/: config.py
wallet/: Dockerfile  run_wallet.sh
